--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.6.0",
+    "chart.js": "^3.2.1",
     "config": "^3.3.6",
     "connect-multiparty": "^2.2.0",
     "express": "^4.17.1",
